IS-61 Name generation